# gecol

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  output  test
gecol-core/: CHANGELOG.md  Cargo.toml  README.md
gecol-core/src/: cache.rs  config.rs  error.rs  lib.rs  prelude.rs
gecol-core/src/extract/: config.rs  extractor.rs  mod.rs  scores.rs
gecol-core/src/template/: color.rs  mod.rs  template_struct.rs
gecol-core/src/theme/: color.rs  mod.rs  theme_struct.rs
src/: args.rs  cache.rs  config.rs  error.rs  extract.rs  extractor.rs  lib.rs  main.rs  prelude.rs
src/args/: action.rs  args_struct.rs  build.rs  config.rs  extract.rs  mod.rs  run.rs
src/extract/: extractor.rs  mod.rs  scores.rs
src/template/: color.rs  mod.rs  template.rs  template_struct.rs
src/theme/: color.rs  theme_struct.rs
