[package]
name = "gecol"
version = "0.1.0"
edition = "2024"

[dependencies]
color-thief = "0.2.2"
dirs = "6.0.0"
image = "0.25.9"
imgref = "1.12.0"
kmeans_colors = "0.7.1"
minijinja = { version = "2.17.1", features = ["loader"] }
mss_saliency = "1.1.0"
palette = { version = "0.7.6", features = ["serializing"] }
pareg = "0.12.0"
serde = { version = "1.0.228", features = ["derive"] }
termal = "4.2.1"
thiserror = "2.0.18"
toml = "1.0.4"
