[package]
name = "gecol"
version = "0.1.0"
authors = ["Martin Slezák (github.com/Martan03)"]
description = "A perception-aware accent color extractor and dynamic theme generator."
keywords = ["color-extraction", "ricing", "template", "palette", "unixporn"]
repository = "https://github.com/Martan03/gecol"
readme = "README.md"
edition = "2024"

[workspace]
members = ["gecol-core"]
resolver = "2"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
gecol-core = { path = "gecol-core", version = "0.1.0" }
indicatif = "0.18.4"
termal = "4.2.1"
thiserror = "2.0.18"
