[package]
name = "gecol-core"
version = "0.1.0"
authors = ["Martin Slezák (github.com/Martan03)"]
description = "A perception-aware accent color extractor and dynamic theme generator."
keywords = ["color-extraction", "ricing", "template", "palette", "unixporn"]
repository = "https://github.com/Martan03/gecol"
documentation = "https://docs.rs/gecol-core/latest/gecol-core"
readme = "README.md"
license-file = "LICENSE"
edition = "2024"

[dependencies]
dirs = "6.0.0"
image = "0.25.9"
imgref = "1.12.0"
kmeans_colors = "0.7.1"
minijinja = { version = "2.17.1", features = ["loader"] }
mss_saliency = "1.1.0"
palette = { version = "0.7.6", features = ["serializing"] }
postcard = { version = "1.1.3", features = ["alloc"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.18"
